--- a/styles/principal.css
+++ b/styles/principal.css
@@ -126,6 +126,7 @@ header{
     background: var(--softDark);
     display: flex;
     width: 20%;
+    min-width: 200px;
     font-size: medium;
     font-weight: 500;
 }
