--- a/styles/principal.css
+++ b/styles/principal.css
@@ -1,3 +1,9 @@
+@import url(header.css);
+@import url(search.css);
+@import url(list.css);
+@import url(list_edit.css);
+@import url(input.css);
+
 :root{
     --white:rgba(255, 255, 255);
     --semiWhite:rgba(255, 255, 255, 0.747);
@@ -27,110 +33,6 @@ body{
     align-items: center;
 }
 
-/* HEADER */
-
-header{
-    width: 100%;
-    height: 10vh;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-}
-
-/* LOGOTIP I HEADER-MAIN CENTER */
-
-#logo {
-    color: var(--limeGreen);
-    font-size: medium;
-    font-weight: lighter;
-    width: 80%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.header_left{
-    width: 10%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    margin-left: 5%;
-    font-size: small;
-}
-
-.header_rigth{
-    width: 10%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    margin-right: 5%;
-    font-size: small;
-}
-
-.clear_all_button {
-    color: var(--darkGrey);
-    font-size: medium;
-    background: none;
-    border: none;
-    color: var(--darkGrey);
-}
-
-.clear_all_button:hover{
-    color: var(--lightRed);
-}
-
-/* SEARCH */
-
-#search_object{
-    z-index: 1;
-    width: 350px;
-    height: 5vh;
-    display: flex;
-    justify-content: center;
-    position: relative;
-}
-
-#search_object button{
-    color: var(--dark);
-    font-size: medium;
-    background: none;
-    border: none;
-    color: var(--dark);
-    height: 100%;
-}
-
-.button_search{
-    position: absolute;
-    right: 9%;
-}
-
-#input_search{
-    color: var(--lightGrey);
-    outline: none;
-    border: none;
-    background: var(--softDark);
-    display: flex;
-    width: 20%;
-    min-width: 300px;
-    font-size: medium;
-    font-weight: 500;
-    padding-left: 2%;
-}
-
-#input_search:focus{
-    background-color: var(--brokenWhite);
-    color: var(--darkGrey);
-}
-
-#input_search::placeholder{
-    color: var(--darkGrey);
-}
-
 /* BODY */
 
 ul{
@@ -144,282 +46,4 @@ ul{
     justify-content: flex-start;
     flex-direction: column;
     align-items: center;
-}
-
-/* CONTINGUT DE CADA TODO - ESTRUCTURA */
-
-li {
-    list-style-type: none;
-    width: 100%;
-}
-
-.toDo_main{
-    color: var(--white);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    transition: all 0.2s;
-    margin-bottom: 0.5%;
-    height: 12vh;
-    margin-right:1%
-}
-
-.toDo_main:hover{
-    background-color: var(--softDark);
-    color: var(--vividBlue);
-    transition: all 0.2s;
-    cursor: pointer;
-}
-
-.toDo_main:active{
-    background-color: var(--greenBlue);
-    color: var(--white);
-    transition: background-color 0,2s;
-}
-
-/* STATUS TODO*/
-
-.toDo_status_default{
-    background:none;
-    margin: 0 auto; 
-    height: 0.5rem;
-    width: 0.5rem;
-    border-radius: 50%;
-    border-width: 0.15rem;
-    border-color: var(--darkGrey);
-    border-style: solid;
-    padding: 0;
-    margin: 3%;
-}
-
-.toDo_status_undone{
-    border-color: var(--lightRed);
-}
-
-.toDo_status_doing{
-    border-color: var(--yellow);
-}
-
-.toDo_status_done{
-    border-color: var(--vividGreen);
-}
-
-/* CONTENIDOR TODO */
-
-.toDo_container{
-    display: flex;
-    justify-content: flex-start;
-    width: 80%;
-    overflow-wrap: anywhere;
-    text-transform: capitalize;
-}
-
-/* BOTONS TODO */
-
-ul i {
-    color: var(--darkGrey);
-    transition: all 0.2s;
-}
-
-.button_delete, .button_edit, .button_lock, .button_save, .button_close, .edit_back_arrow {
-    background: none;
-    border: none;
-    cursor: pointer;
-    font-size: large;
-    width: 25px;
-    height: 25px;
-    margin-left: 2%;
-}
-
-.button_delete:hover, .button_edit:hover, .button_lock:hover{
-    background:none;
-}
-
-.button_edit:hover{
-    color: var(--blue);
-}
-
-.button_lock:hover{
-    color: var(--yellow);
-}
-
-.button_delete:hover{
-    color: var(--lightRed);
-}
-
-.button_delete:active, .button_edit:active, .button_lock:active{
-    color: var(--white);
-}
-
-/* EDIT TO DO VIEW */
-
-.edit_container{
-    display: flex;    
-    z-index: 1;
-    width: 100%;
-    /* border-radius: 1em; */
-    height: 12vh;
-    background-color: var(--greenBlue);
-    color:var(--white);
-    align-items: center;
-    justify-content:center;
-    margin: 0;
-    padding: 0;
-}
-
-.edit_back_arrow{
-    height: 100%;
-    justify-content: center;
-    background:none;
-    border: none;
-    cursor: pointer;
-}
-
-.edit_back_arrow:hover i{
-    color: var(--white);
-    }
-
-.edit_back_arrow:active i{
-    color: var(--semiWhite);
-}
-
-.edit_container input{
-    background:none;
-    background-color: var(--greenBlue);
-    border: none;
-    font-size: medium;
-    width: 78%;
-    height: 60%;
-    color:var(--white);
-}
-
-.edit_container input::placeholder {
-    color: var(--semiWhite);
-    font-size: medium;
-    font-weight: 500;
-    padding-left: 2%;
-}
-
-.edit_container input:hover {
-    background-color: var(--harderGreenBlue);
-}
-
-.edit_container input:focus {
-    outline: none;
-    border: none;
-}
-
-.button_save, .button_close {
-    margin-right: 2%;
-}
-
-.edit_container i{
-    color: var(--dark);
-}
-
-.button_save i:hover {
-    background:none;
-    color: var(--limeGreen);
-}
-
-.button_close i:hover{
-    color: var(--lightRed);
-}
-
-.button_save i:active, .button_close i:active{
-    color: var(--white);
-}
-
-/* INPUT ADD TODO*/
-
-footer{
-    display: flex;
-    width: 100%;
-    height: 10vh;
-    justify-content: center;
-    align-items: center;
-}
-
-#input_object{
-    width: 95%;
-    max-width: 600px;
-    height: 70%;
-    max-height: 50px;
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-    position: relative;
-}
-
-#input_task{
-    margin: 0;
-    padding-left: 4%;
-    padding-right: 20%;
-}
-
-footer input{
-    border: none;
-    width: 100%;
-    font-size: larger;
-    margin-left: 20px;
-    padding: 0;
-    background-color: var(--darkGrey);
-    border-radius: 20px;
-    max-width: 450px;
-    height: 100%;
-    max-height: 40px;
-    display: flex;
-    align-items: center;
-    justify-content: flex-end
-}
-
-footer input::placeholder {
-    color: var(--lightGrey);
-    font-size: medium;
-    font-weight: 500;
-}
-
-footer input:hover::placeholder {
-    color:var(--lightGrey);
-}
-
-footer input:hover {
-    color: var(--dark);
-    background-color: var(--brokenWhite);
-}
-
-footer input:focus {
-    outline: none;
-    border: none;
-    color: var(--dark);
-    font-size: large;
-    font-weight: 500;
-    background-color: var(--brokenWhite);
-}
-
-/* BOTÓ ADD*/
-
-#buttons_inside_input{
-    display: flex;
-    margin-right: 1%;
-    position: absolute;
-}
-
-#buton_add {
-    background:none;
-    border:none;
-    padding: 0;
-}
-
-footer i{
-    color: var(--dark);
-    font-size: xx-large;
-}
- 
-footer i:hover{
-    color: var(--vividBlue);
-}
-
-footer i:active{
-    color:var(--limeGreen);
 }
