--- a/styles/main.css
+++ b/styles/main.css
@@ -1,7 +1,7 @@
 @import url(header.css);
 @import url(search.css);
 @import url(list.css);
-@import url(list_edit.css);
+@import url(edit.css);
 @import url(input.css);
 
 :root{
