--- a/styles/input.css
+++ b/styles/input.css
@@ -17,36 +17,21 @@ footer{
     position: relative;
 }
 
-#input_task{
-    margin: 0;
-    padding-left: 4%;
-    padding-right: 20%;
-}
-
 footer input{
     border: none;
     width: 100%;
     font-size: larger;
     margin-left: 20px;
-    padding: 0;
     background-color: var(--darkGrey);
     border-radius: 20px;
-    max-width: 450px;
     height: 100%;
     max-height: 40px;
     display: flex;
     align-items: center;
-    justify-content: flex-end
-}
-
-footer input::placeholder {
-    color: var(--lightGrey);
-    font-size: medium;
-    font-weight: 500;
-}
-
-footer input:hover::placeholder {
-    color:var(--lightGrey);
+    justify-content: flex-end;
+    margin: 0;
+    padding-left: 4%;
+    padding-right: 20%;
 }
 
 footer input:hover {
@@ -61,6 +46,16 @@ footer input:focus {
     font-size: large;
     font-weight: 500;
     background-color: var(--brokenWhite);
+}
+
+footer input::placeholder {
+    color: var(--lightGrey);
+    font-size: medium;
+    font-weight: 500;
+}
+
+footer input:hover::placeholder {
+    color:var(--lightGrey);
 }
 
 /* BOTÓ ADD*/
