--- a/styles/main.css
+++ b/styles/main.css
@@ -35,7 +35,7 @@ body{
 
 ul{
     width: 100%;
-    max-width: 600px;
+    max-width: 40rem;
     height: 74vh;
     margin: 1vh auto 0vh auto;
     padding: 0;
