--- a/styles/input.css
+++ b/styles/input.css
@@ -7,10 +7,10 @@ footer{
 }
 
 #input_object{
-    width: 95%;
-    max-width: 600px;
+    width: 96%;
+    max-width: 40rem;
     height: 70%;
-    max-height: 50px;
+    max-height: 7rem;
     display: flex;
     align-items: center;
     justify-content: flex-end;
@@ -21,11 +21,11 @@ footer input{
     border: none;
     width: 100%;
     font-size: larger;
-    margin-left: 20px;
     background-color: var(--darkGrey);
-    border-radius: 20px;
+    /* border-radius: 1rem; */
+    border-radius: 2rem;
     height: 100%;
-    max-height: 40px;
+    max-height: 2.5rem;
     display: flex;
     align-items: center;
     justify-content: flex-end;
